# conjugate

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml  release.yml
.github/workflows/: bot-prs.yml  coverage.yml  docs.yml  publish.yml  release.yml  sync-closing-labels.yml  tests.yml
conjugate/: _beta_geometric.py  _compound_gamma.py  _typing.py  distributions.py  models.py  plot.py  slice.py
distributions/: index.html
docs/: distributions.md  index.md  mixins.md  models.md
docs/examples/: bayesian-update.md  binomial.md  bootstrap.md  generalized-inputs.md  indexing.md  limit.md  linear-regression.md  plotting.md  pymc-sampling.md  sampling-distributions.md  scaling-distributions.md  scipy-connection.md  sql.md  thompson.md  unsupported-distributions.md  vectorized-inputs.md
docs/overrides/partials/: comments.html
examples/bayesian-update/: index.html
examples/binomial/: index.html
examples/bootstrap/: index.html
examples/generalized-inputs/: index.html
examples/indexing/: index.html
examples/limit/: index.html
examples/linear-regression/: index.html
examples/plotting/: index.html
examples/pymc-sampling/: index.html
examples/sampling-distributions/: index.html
examples/scaling-distributions/: index.html
examples/scipy-connection/: index.html
examples/sql/: index.html
examples/thompson/: index.html
examples/unsupported-distributions/: index.html
examples/vectorized-inputs/: index.html
mixins/: index.html
models/: index.html
overrides/partials/: comments.html
scripts/: parameter-recovery.py  post-engagement.py
search/: search_index.json
tests/: test_distributions.py  test_example_plots.py  test_models.py  test_plot.py  test_version.py
