[tool.poetry]
name = "conjugate-models"
version = "0.11.0"
description = "Bayesian Conjugate Models in Python"
authors = ["Will Dean <wd60622@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://wd60622.github.io/conjugate/"
documentation = "https://wd60622.github.io/conjugate/"
repository = "https://github.com/wd60622/conjugate"
packages = [
    { include = "conjugate" },
    { include = "conjugate/py.typed" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
matplotlib = "*"
numpy = "*"
scipy = "*"
packaging = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pandas = "*"
pypika = "^0.48.9"
pymc = "^5.5.0"
ipython = "8.10.0"
scikit-learn = "^1.3.2"
tox = "^4.11.4"
pytest-mpl = "^0.16.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.17"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}

[tool.pytest.ini_options]
addopts = "--mpl --mpl-baseline-path=tests/example-plots --cov=conjugate --cov-report=xml --cov-report=term-missing"

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = true
    env_list =
        py312
        py311
        py310

    [testenv]
    deps = 
        pytest 
        pytest-cov
        pytest-mpl
        pypika
    commands = pytest tests
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
